project-17-aws-eks-kubernetes-container-orchestration-platform/kubernetes/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: java-app

spec:

  replicas: 2

  selector:

    matchLabels:

      app: java-app

  template:

    metadata:

      labels:

        app: java-app

    spec:

      containers:

      - name: java-app

        image: enterprise/java-app:latest

        ports:

        - containerPort: 8080
