project-17-aws-eks-kubernetes-container-orchestration-platform/kubernetes/service.yaml
apiVersion: v1

kind: Service

metadata:

  name: java-app-service

spec:

  selector:

    app: java-app

  ports:

  - port: 80

    targetPort: 8080

  type: LoadBalancer
