project-17-aws-eks-kubernetes-container-orchestration-platform/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: application-ingress

spec:

  rules:

  - host: app.example.com

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: java-app-service

            port:

              number: 80
